<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividad1">

<!--    vanilla input -->
    <TextView
        android:id="@+id/vanillaLegend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vainilla"

        android:layout_marginTop="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:textSize="25sp"
        android:textColor="@color/mainColor"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/vanilla"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad_vainilla"
        android:inputType="number"

        app:layout_constraintTop_toBottomOf="@id/vanillaLegend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="0"
        android:textAlignment="center"
        android:textSize="30sp"
        />

<!--    chocolate input -->
    <TextView
        android:id="@+id/chocolateLegend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"

        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/vanilla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:textSize="25sp"
        android:textColor="@color/mainColor"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/chocolate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad_chocolate"
        android:inputType="number"

        app:layout_constraintTop_toBottomOf="@id/chocolateLegend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="0"
        android:textAlignment="center"
        android:textSize="30sp"
        />

<!--    strawberry input -->
    <TextView
        android:id="@+id/strawberryLegend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fresa"

        app:layout_constraintTop_toBottomOf="@id/chocolate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"

        android:textSize="25sp"
        android:textColor="@color/mainColor"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/strawberry"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad_fresa"
        android:inputType="number"

        app:layout_constraintTop_toBottomOf="@id/strawberryLegend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="0"
        android:textAlignment="center"
        android:textSize="30sp"
        />

<!--    container spinner selector -->
    <TextView
        android:id="@+id/spinnerLegend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/strawberry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"

        android:text="@string/recipiente"
        android:textSize="25sp"
        android:textColor="@color/mainColor"
        android:textStyle="bold"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="60dp"

        app:layout_constraintTop_toBottomOf="@id/spinnerLegend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

<!--    generate ice cream button -->
    <Button
        android:id="@+id/generate"
        android:layout_width="match_parent"
        android:layout_height="90dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/generar_helado"
        android:textSize="30sp"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/mainColor"
        />

</androidx.constraintlayout.widget.ConstraintLayout>